--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Подключение шрифта https://fonts.google.com/selection/embed -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap"
+			rel="stylesheet"
+		/>
 		<title>my-photo-blog</title>
 	</head>
 	<body>
