--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image/svg+xml" href="/public/icon/favaicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- Подключение шрифта-->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,7 +12,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>my-photo-blog</title>
+		<title>Фотоблог</title>
 	</head>
 	<body>
 		<div id="root"></div>
